--- a/src/pages/Reader.css
+++ b/src/pages/Reader.css
@@ -91,10 +91,7 @@
   font-size: 16px;
 }
 
-.settings-item.secondary {
-  padding-left: 24px;
-}
-
+/* Checkbox sizes */
 .settings-checkbox {
   width: 20px;
   height: 20px;
@@ -103,24 +100,16 @@
 .settings-checkbox-secondary {
   width: 16px;
   height: 16px;
-  padding-right: 20px
-.settings-checkbox {
-  width: 16px;
-  height: 16px;
+  padding-right: 20px;
 }
 
 .settings-subgroup {
   margin-left: 16px;
   padding-left: 10px;
-  border-left: 2px solid #e2e2e2;
   margin-top: 6px;
 }
 
-.settings-item.nested {
-  font-size: 13px;
-  opacity: 0.9;
-}
-
+/* Grey out / disable subgroup options when read mode is off */
 .settings-subgroup.is-disabled {
   opacity: 0.5;
   pointer-events: none;
@@ -134,12 +123,11 @@
   text-align: left;
   max-height: calc(100vh - 160px);
   overflow: hidden;
-  line-height: 2em;
 }
 
 /* Highlights the current word and has small transition (Word read mode) */
 .reader-word {
-  transition: background-color 200ms ease, transform 200ms ease, font-size 300ms ease;
+  transition: background-color 200ms ease, transform 200ms ease, font-size 300ms ease, color 200ms ease;
   font-size: 1em;
   display: inline;
 }
@@ -149,14 +137,17 @@
   border-radius: 2px;
 }
 
+/* Magnify mode */
 .reader-word.is-magnified {
   font-size: 1em;
-  transform-origin: center bottom;
-  transform: scale(1.3);
   display: inline-block;
+  transform: scale(1.2);
+  transform-origin: center center;
   margin-left: 1em;
   margin-right: 1em;
   color: blue;
+}
+
 /* makes non current lines lower contrast */
 .reader-word.is-dim {
   color: #a7abb0;
@@ -207,7 +198,6 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
-
 }
 
 /* For reader navigation buttons (next/prev/finish) */
@@ -229,4 +219,3 @@
 .reader-next:active {
   transform: translateY(1px);
 }
-
