Default Landing Page is now Login/Signup
After logging in, users will be able to see the rest of the page.

--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,16 @@ body {
   border-radius: 4px;
 }
 
+.navbar button {
+
+  color: white;
+  background-color: red;
+  border-radius: 8px;
+  cursor: pointer;
+
+
+}
+
 .navbar a.active {
   background: #363636;
 }
