--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,16 @@ body.dark-mode {
   border-radius: 4px;
 }
 
+.navbar button {
+
+  color: white;
+  background-color: red;
+  border-radius: 8px;
+  cursor: pointer;
+
+
+}
+
 .navbar a.active {
   background: #363636;
 }
