--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -45,7 +45,7 @@
   box-shadow: 4px 4px 0px #000000;
 }
 
-.login-container button {
+.submit-button {
   width: 100%;
   padding: 12px;
   background-color: #0078ff;
@@ -58,20 +58,46 @@
   transition: all 0.3s;
 }
 
-.login-container button:hover {
+.submit-button:hover {
   box-shadow: 4px 4px 0px #000000;
   transform: translate(-2px, -2px);
 }
 
+.error {
+
+  margin-top: 15px;
+  color: rgb(255, 54, 54);
+  text-align: center;
+
+}
+
 .signup {
+
   text-align: center;
   margin-top: 20px;
   color: #000000;
+  font-size: 0.95rem;
 
 }
 
 .signup button {
 
-  background-color: aqua;
+  background: none;
+  border: none;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  color: #000000;
+  text-decoration: underline;
+  cursor: pointer;
+  font-weight: bold;
+  padding: 0;
+  font-size: 1rem;
+
+}
+
+.signup button:hover {
+
+  color: rgb(211, 52, 41);
 
 }
